fix: allow scroll on mobile screens

--- a/public/main.css
+++ b/public/main.css
@@ -45,6 +45,10 @@ details > * {
   html, body, body > main {
     height: auto;
   }
+
+  body {
+    overflow: auto;
+  }
 }
 
 #intro_wrapper { grid-area: intro; }
